Fix broken alignment in Chrome

--- a/src/static/scss/utilities/_utilities.shame.scss
+++ b/src/static/scss/utilities/_utilities.shame.scss
@@ -340,6 +340,10 @@ body {
         }
     }
 
+    dl {
+        margin: 0; /* [1] */
+    }
+
     dt {
         font-weight: 700;
     }
